--- a/app/src/main/res/layout/activity_page_course.xml
+++ b/app/src/main/res/layout/activity_page_course.xml
@@ -7,23 +7,23 @@
     tools:context=".PageCourse">
 
     <ListView
-        android:id="@+id/listViewCursos"
+        android:id="@+id/listViewCourses"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         tools:ignore="MissingConstraints" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewCursos"
+        android:id="@+id/recyclerViewCourses"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_constraintTop_toBottomOf="@id/layoutCrearCurso"
+        app:layout_constraintTop_toBottomOf="@id/layoutCreateCourse"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fabAgregarCurso"
+        android:id="@+id/fabAddCourse"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
@@ -38,7 +38,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/layoutCrearCurso"
+        android:id="@+id/layoutCreateCourse"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -51,22 +51,69 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <EditText
-            android:id="@+id/editTextNombreCurso"
+            android:id="@+id/edtNameCourse"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="Ingrese el nombre del curso"
-            app:layout_constraintEnd_toStartOf="@+id/btnCrearCurso"
+            android:hint="@string/edtNameCourse"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
-            android:id="@+id/btnCrearCurso"
-            android:layout_width="wrap_content"
+        <EditText
+            android:id="@+id/edtSchoolCourse"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Crear"
+            android:hint="@string/edtSchoolCourse"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/editTextNombreCurso"
-            app:layout_constraintTop_toTopOf="@+id/editTextNombreCurso" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/edtNameCourse" />
+
+        <EditText
+            android:id="@+id/edtShiftCourse"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="@string/edtShiftCourse"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/edtSchoolCourse" />
+
+        <EditText
+            android:id="@+id/edtAddressCourse"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="@string/edtAddressCourse"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/edtShiftCourse" />
+
+        <LinearLayout
+            android:id="@+id/layoutButtons"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="16dp"
+            android:layout_marginHorizontal="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/edtAddressCourse"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <Button
+                android:id="@+id/btnCreateCourse"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/btnCreateCourse"
+                android:layout_marginEnd="8dp" />
+
+            <Button
+                android:id="@+id/btnCancelCreateCourse"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/btnCancel"
+                android:layout_marginStart="8dp" />
+        </LinearLayout>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
