--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <style name="BalloonStyleNameCourse">
+        <item name="android:textSize">20sp</item>
+        <item name="android:background">#FFFFFF</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+    <style name="BalloonStyleCourse">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:background">#FFFFFF</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:text">@string/textTest</item>
+    </style>
     <style name="BalloonStyleName">
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">35sp</item>
         <item name="android:background">#FFFFFF</item>
         <item name="android:textColor">#000000</item>
         <item name="android:layout_width">wrap_content</item>
@@ -11,7 +27,7 @@
     <style name="BalloonStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">35sp</item>
         <item name="android:background">#FFFFFF</item>
         <item name="android:textColor">#000000</item>
         <item name="android:text">@string/textTest</item>
