--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -2,52 +2,55 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/btnCrearUsuario"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
+    android:background="@drawable/create_account"
     tools:context=".Login.CreateAccountActivity">
 
     <TextView
-        android:id="@+id/txtCreandoUsuario"
+        android:id="@+id/txtCreateUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/strCreateUser"
+        android:textSize="30sp"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="50dp"/>
 
     <EditText
         android:id="@+id/edtEmailCreate"
-        android:layout_width="380dp"
-        android:layout_height="72dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
-        android:text="@string/strEmail"
+        android:hint="@string/strEmail"
+        style="@style/EditTextStyle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtCreandoUsuario"
-        app:layout_constraintVertical_chainStyle="packed" />
+        app:layout_constraintTop_toBottomOf="@+id/txtCreateUser"/>
 
     <EditText
         android:id="@+id/edtConfirmPass"
-        android:layout_width="379dp"
-        android:layout_height="61dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="44dp"
         android:hint="@string/strPasswordRepeat"
         android:inputType="textPassword"
+        style="@style/EditTextStyle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edtPass"
-        app:layout_constraintVertical_chainStyle="packed"
         tools:ignore="MissingConstraints" />
 
     <EditText
         android:id="@+id/edtPass"
-        android:layout_width="379dp"
-        android:layout_height="65dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="44dp"
         android:hint="@string/strPassword"
         android:inputType="textPassword"
+        style="@style/EditTextStyle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.531"
         app:layout_constraintStart_toStartOf="parent"
