--- a/app/src/main/res/layout/activity_remember_password.xml
+++ b/app/src/main/res/layout/activity_remember_password.xml
@@ -4,27 +4,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/remember_password"
     tools:context=".Login.RememberPassword">
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="Crear nueva contrasenia"
+        android:layout_marginTop="50dp"
+        android:textSize="25dp"
+        android:textColor="@color/white"
+        android:text="@string/create_new_password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/edtEmailRemembarPass"
-        android:layout_width="217dp"
-        android:layout_height="65dp"
-        android:layout_marginTop="28dp"
+        android:id="@+id/edtEmailRememberPass"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
         android:ems="10"
         android:hint="@string/strEmail"
         android:inputType="textEmailAddress"
+        style="@style/EditTextStyle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
@@ -38,5 +42,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtEmailRemembarPass" />
+        app:layout_constraintTop_toBottomOf="@+id/edtEmailRememberPass" />
 </androidx.constraintlayout.widget.ConstraintLayout>
