--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -28,8 +28,10 @@
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:background="@color/teal_200"
             android:layout_marginEnd="16dp"
             android:paddingTop="10dp"
+            android:paddingBottom="10dp"
             android:gravity="center_vertical|center_horizontal"
             android:textSize="30dp"
             tools:text="Text" />
@@ -58,12 +60,14 @@
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
+            android:background="@color/teal_200"
             android:text="@string/return_student" />
 
         <Button
             android:id="@+id/btnTo_register"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
+            android:background="@color/teal_200"
             android:layout_marginEnd="10dp"
             android:text="@string/to_register" />
 
